[gd_scene load_steps=3 format=3 uid="uid://qc207m1uyidi"]

[ext_resource type="Script" path="res://Escenas/Eventos/darseduro/evento_darse_duro.gd" id="1_gmxqv"]
[ext_resource type="PackedScene" uid="uid://fkqmi5o8tqo5" path="res://Escenas/Eventos/darseduro/gato.tscn" id="1_k6i8i"]

[node name="EventoDarseDuro" type="Node2D"]
script = ExtResource("1_gmxqv")

[node name="Gato" parent="." instance=ExtResource("1_k6i8i")]
position = Vector2(605, 335)

[node name="Gato2" parent="." instance=ExtResource("1_k6i8i")]
position = Vector2(779, 337)
jugador = 2

[node name="TimerFinalizarEvento" type="Timer" parent="."]
process_callback = 0
wait_time = 12.0
one_shot = true
autostart = true

[connection signal="p2_can_hit" from="Gato2" to="." method="relay_p2_can_hit"]
[connection signal="timeout" from="TimerFinalizarEvento" to="." method="_on_timer_finalizar_evento_timeout"]
